# checkpoint

./: .dockerignore  Cargo.toml  Dockerfile  README.md  flake.nix  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: build.yaml  clippy.yaml  crdgen.yaml  lint.yaml  release-chart.yaml  release-image.yaml  rustfmt.yaml  test.yaml
examples/: mutatingrule.yaml  validatingrule.yaml
examples/cronpolicy/: admission-webhook-without-high-availability.yaml  simple.yaml
examples/mutatingrule/: add-ttl-to-jobs.yaml  jsonpatch_diff.yaml  simple-jsonpatch-diff.yaml  simple.yaml  simple_jsonpatch_diff.yaml
examples/mutatingrule/simple/: request.yaml  result.yaml  rule.yaml  testcase.yaml
examples/mutatingrule/simple-jsonpatch-diff/: rule.yaml
examples/mutatingrule/simple-with-validation/: request-good.yaml  request-great.yaml  result.yaml  rule.yaml  testcase.yaml
examples/testcase/multiple-mutation/: testcase.yaml
examples/validatingrule/: block-pod-exec-by-namespace-annotation.yaml  delete-protection.yaml  disallow-default-namespace.yaml  disallow-wildcard-resources.yaml  simple-kube-list.yaml  simple.yaml  simple_kube_get.yaml  simple_kube_list.yaml  whitelisting-image-registries.yaml
examples/validatingrule/simple/: good-request.yaml  rule.yaml  testcase.yaml
examples/validatingrule/simple-kube-get/: block-namespace.yaml  rule.yaml  testcase.yaml
examples/validatingrule/simple-kube-list/: kube-list-output.yaml  request-bad.yaml  request-good.yaml  rule.yaml  testcase.yaml
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  cert.yaml  controller.yaml  customresourcedefinition.yaml  deployment.yaml  issuer.yaml  mutatingwebhookconfiguration.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/templates/crds/: customresourcedefinition.yaml
src/: checker.rs  config.rs  filewatcher.rs  handler.rs  js.rs  leader_election.rs  lib.rs  lua.rs  main.rs  reconcile.rs  types.rs  util.rs
src/checker/: runtime.js
src/handler/: internal.rs  js.rs  lua.rs  mod.rs  runtime.js
src/handler/js/: helper.rs
src/handler/lua/: helper.rs  mod.rs
src/js/: helper.rs  runtime.js
src/lua/: helper.rs
src/reconcile/: policy.rs  rule.rs
src/types/: mod.rs  policy.rs  rule.rs  testcase.rs
