[package]
name = "checkpoint"
version = "0.1.0"
edition = "2021"
default-run = "checkpoint"

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
axum = "0.5.13"
axum-server = { version = "0.4.0", features = ["tls-rustls"] }
base64 = "0.13.0"
chrono = "0.4.21"
envy = "0.4.2"
futures-util = "0.3.21"
json-patch = "0.2.6"
k8s-openapi = { version = "0.15.0", features = ["v1_21", "schemars"] }
kube = { version = "0.74.0", default-features = false, features = ["rustls-tls", "client", "derive", "runtime", "admission"] }
mlua = { version = "0.8.3", features = ["luau", "serialize", "async"] }
once_cell = "1.13.0"
schemars = "0.8.10"
secrecy = "0.8.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.26"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["fmt"] }
