[package]
name = "checkpoint"
version = "0.1.0"
edition = "2021"
default-run = "checkpoint"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
axum = "0.5.16"
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
base64 = "0.13.0"
chrono = "0.4.22"
clap = { version = "4.0.12", features = ["derive"] }
envy = "0.4.2"
futures-util = "0.3.24"
hostname = "0.3.1"
http = "0.2.8"
itertools = "0.10.5"
json-patch = "0.2.6"
k8s-openapi = { version = "0.16.0", features = ["v1_21", "schemars"] }
kube = { version = "0.75.0", default-features = false, features = ["rustls-tls", "client", "derive", "runtime", "admission"] }
mlua = { version = "0.8.4", features = ["luau", "serialize", "async", "send"] }
once_cell = "1.15.0"
schemars = "0.8.11"
secrecy = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }

[[bin]]
name = "checkpoint-controller"
path = "src/bin/controller.rs"

[[bin]]
name = "checkpoint-webhook"
path = "src/bin/webhook.rs"

[[bin]]
name = "checkpoint"
path = "src/bin/cli.rs"
