[package]
name = "checkpoint"
version = "0.1.0"
edition = "2021"
default-run = "checkpoint"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
axum = "0.6.1"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
chrono = "0.4.23"
clap = { version = "4.0.30", features = ["derive"] }
envy = "0.4.2"
futures-util = "0.3.25"
hostname = "0.3.1"
http = "0.2.8"
itertools = "0.10.5"
json-patch = "0.3.0"
k8s-openapi = { version = "0.16.0", features = ["v1_21", "schemars"] }
kube = { version = "0.77.0", default-features = false, features = ["rustls-tls", "client", "derive", "runtime", "admission"] }
mlua = { version = "0.8.9", features = ["luau", "serialize", "async", "send"] }
# default-features is disabled for tokio compatibility.
# See https://docs.rs/notify/latest/notify/#crossbeam-channel--tokio
notify = { version = "5.0.0", default-features = false }
once_cell = "1.16.0"
schemars = { version = "0.8.11", features = ["url"] }
secrecy = "0.8.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
stopper = "0.2.0"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
url = { version = "2.3.1", features = ["serde"] }

[[bin]]
name = "checkpoint-controller"
path = "src/bin/controller.rs"

[[bin]]
name = "checkpoint-webhook"
path = "src/bin/webhook.rs"

[[bin]]
name = "checkpoint"
path = "src/bin/cli.rs"
